--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Mi Curriculum Vitae</title>
 </head>
@@ -11,6 +12,35 @@
         <h1> Mi CV - nuevamente cambiado </h1>
         <img src="assets/img/By-Crist.jpeg" alt="foto Cristopher Rivera" width="200px">
     </header>
+    <header>
+        <h1>Curriculum Vitae</h1>
+        <h2>Rodrigo Vasquez Cespedes</h2>
+    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#datos_personales">Datos Personales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#datos_formacion">Formacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#datos_premios">Premios y reconocimientos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
 
     <section>
 
@@ -21,17 +51,17 @@
         </div>
 
         <div>
-            <h2>Datos personales</h2>
+            <h2 id="datos_personales">Datos personales</h2>
             <ul>
                 <li>Nombre: Cristopher Rivera</li>
                 <li>Fecha de nacimiento: 1991</li>
                 <li>Lugar de nacimiento: Chile</li>
             </ul>
 
-            <h2>Formacion</h2>
+            <h2 id="datos_formacion">Formacion</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio excepturi quod assumenda error in ipsam necessitatibus quas obcaecati! Placeat, saepe.</p>
 
-            <h2>Premios y reconocimientos</h2>
+            <h2 id="datos_premios">Premios y reconocimientos</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae nemo, est numquam ab cumque optio!</p>
 
             <ol>
@@ -54,6 +84,6 @@
 
   
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
