--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         <h1> Mi CV - nuevamente cambiado </h1>
         <img src="assets/img/By-Crist.jpeg" alt="foto Cristopher Rivera" width="200px">
     </header>
-    <header>
-        <h1>Curriculum Vitae</h1>
-        <h2>Rodrigo Vasquez Cespedes</h2>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-text bg-body sticky-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
