fix: Se agrega nav e icono de usuario

--- a/index.html
+++ b/index.html
@@ -11,79 +11,31 @@
 </head>
 <body>
 
-    <header>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="assets/img/By-Crist.jpeg"  class="plog"  alt="Cristopher" width="20%" ></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Resumen</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Conocimientos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Portafolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-
-
-    </header>
-
-   
-   
-
-    <section>
-
-        <div>
-            <h2>Resumen </h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt earum id inventore, nulla tempora totam. Fugit ipsa deleniti dolor eum delectus necessitatibus praesentium maxime eaque deserunt, vel, exercitationem repudiandae possimus saepe adipisci nam culpa voluptate suscipit! Beatae tempore sequi odio ratione maiores, quibusdam doloribus magni nisi! Nemo perspiciatis vel blanditiis?</p>
-    
-        </div>
-
-        <div>
-            <h2>Datos personales</h2>
-            <ul>
-                <li>Nombre: Cristopher Rivera</li>
-                <li>Fecha de nacimiento: 1991</li>
-                <li>Lugar de nacimiento: Chile</li>
-            </ul>
-
-            <h2>Formacion</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio excepturi quod assumenda error in ipsam necessitatibus quas obcaecati! Placeat, saepe.</p>
-
-            <h2>Premios y reconocimientos</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae nemo, est numquam ab cumque optio!</p>
-
-            <ol>
-                <li>2000: p</li>
-                <li>2001: s</li>
-                <li>2002: t</li>
-                <li>2003: c</li>
-            </ol>
-        </div>
-
-        <footer>
-            <p>Fuente: Cristopher Rivera</p>
-            <p>Todos los derechos reservados</p>
-        </footer>
-
-
+  <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"> </p> <i class="fa-solid fa-user mx-3"></i> Cristopher Rivera </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">SobreMi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Experiencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Trabajos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
         
-
-    </section>
-
+      </div>
+    </div>
+  </nav>
   
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
