--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent my-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> </p> <i class="fa-solid fa-user mx-3"></i> Cristopher Rivera </a>
+      <a class="navbar-brand py-5" id="plog" href="#"> </p> <i class="fa-solid fa-user mx-3" id="picon"></i> Cristopher Rivera </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,13 +29,19 @@
             <a class="nav-link" href="#">Trabajos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link disabled">Contacto</a>
           </li>
         </ul>
         
       </div>
     </div>
   </nav>
+
+  <header class="text-center d-flex flex-column justify-content-center">
+
+    <h1>Soy Cristopher Rivera</h1>
+    <H2>DESARROLLADOR FULLSTACK</H2>
+  </header>
   
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
