--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent my-3">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container-fluid">
-      <a class="navbar-brand py-5" id="plog" href="#"> </p> <i class="fa-solid fa-user mx-3" id="picon"></i> Cristopher Rivera </a>
+      <a class="navbar-brand py-4" id="plog" href="#"> </p> <i class="fa-solid fa-user mx-3" id="picon"></i> Cristopher Rivera </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,8 +40,31 @@
   <header class="text-center d-flex flex-column justify-content-center">
 
     <h1>Soy Cristopher Rivera</h1>
-    <H2>DESARROLLADOR FULLSTACK</H2>
+    <H2> Student Full Stack Developer</H2>
   </header>
+
+  <section id="SobreMi" class="container">
+    <h2 class="text-center m-3 ">Sobre Mi</h2>
+
+    <div class="row">
+
+      <div class="col-md-6">
+        <img src="assets/img/By-Crist.jpeg"width="25%" alt="mi foto">
+      </div>
+
+      <div class="col-md-6" id="datos">
+        <ul>
+        <br> 
+         <li>Edad: 32</li>
+         <li>eMail: cris.riverahernandez@gmail.com</li>
+         <li>Situacion Laboral: Independiente</li>
+        </ul>
+ 
+       </div>
+
+    </div>
+
+  </section>
   
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
