--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </header>
 
   <section id="Educacion" class="container">
-    <h2 class="text-center m-3 ">Educacion</h2>
+    <p class="text-center m-3" id="Fonted">Educación</p>
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -61,7 +61,7 @@
           <img src="assets/img/audio.webp" class="d-block w-50" alt="equipos de audio y grabacion">
 
           <ul>
-            <li>Tecnico en Sonido</li>
+            <li>Tecnico en Sonido y produccion musical</li>
             <li>IP Chile </li>
             <li>2010 - 2013</li>
         </ul>
