Se agrega seccion de Experiencia

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </header>
 
   <section id="Educacion" class="container">
-    <p class="text-center m-3" id="Fonted">Educación</p>
+    <p class="text-center m-3 p-4" id="Fonted">Educación</p>
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -67,7 +67,7 @@
         </ul>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/By-Crist.jpeg" class="d-block w-50" alt="...">
+          <img src="assets/img/By-Crist.jpeg" class="d-block w-50" alt="yo en un piano">
 
           <ul>
             <li>Musico Autodidacta</li>
@@ -85,6 +85,13 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div> 
+
+  </section>
+
+  <section id="Experiencia" class="container-fluid">
+
+    <p class="text-center m-3 p-4" id="Fonte">Experiencia</p>
+
 
   </section>
   
