Se agrega seccion de Experiencia y completa CSS

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <li>2010 - 2013</li>
         </ul>
         </div>
-        <div class="carousel-item">
-          <img src="assets/img/By-Crist.jpeg" class="d-block w-50" alt="yo en un piano">
+        <div class="carousel-item" >
+          <img src="assets/img/By-Crist.jpeg" class="d-block" width="30% " alt="yo en un piano">
 
           <ul>
             <li>Musico Autodidacta</li>
@@ -90,7 +90,21 @@
 
   <section id="Experiencia" class="container-fluid">
 
-    <p class="text-center m-3 p-4" id="Fonte">Experiencia</p>
+    <p class="text-center m-3 p-4" id="Fonted">Experiencia</p>
+
+    <div class="container text-center" id="infoexp">
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, unde?</p>
+      <hr>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, omnis!</p>
+      <hr>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, beatae.</p>
+
+
+    </div>
+
+  
+    
 
 
   </section>
