Se agrega seccion de portafolio con imagenes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a class="nav-link active" aria-current="page" href="#Educacion">Educacion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Experiencia</a>
+            <a class="nav-link" href="#Experiencia">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Portafolio</a>
+            <a class="nav-link" href="#Portafolio">Portafolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled">Contacto</a>
@@ -40,7 +40,7 @@
   <header class="text-center d-flex flex-column justify-content-center text-white">
 
     <h1>Soy Cristopher Rivera</h1>
-    <H2> Student Full Stack Developer</H2>
+    <H2> Full Stack Developer Student </H2>
   </header>
 
   <section id="Educacion" class="container">
@@ -52,6 +52,7 @@
           <img src="assets/img/placa electronica.jpg" class="d-block w-50" alt="placa electronica">
 
           <ul>
+            <br>
             <li>Electronico Industrial</li>
             <li>CFT Inacap </li>
             <li>2018 - 2021</li>
@@ -61,6 +62,7 @@
           <img src="assets/img/audio.webp" class="d-block w-50" alt="equipos de audio y grabacion">
 
           <ul>
+            <br>
             <li>Tecnico en Sonido y produccion musical</li>
             <li>IP Chile </li>
             <li>2010 - 2013</li>
@@ -70,6 +72,7 @@
           <img src="assets/img/By-Crist.jpeg" class="d-block" width="30% " alt="yo en un piano">
 
           <ul>
+            <br>
             <li>Musico Autodidacta</li>
             <li>Guitarra - Bajo - Teclado - Percusion - Diseño sonoro programado </li>
             <li>2008 - 2023</li>
@@ -90,23 +93,49 @@
 
   <section id="Experiencia" class="container-fluid">
 
-    <p class="text-center m-3 p-4" id="Fonted">Experiencia</p>
+    <p class="text-center m-3 p-4" id="Fontexp">Experiencia</p>
 
     <div class="container text-center" id="infoexp">
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, unde?</p>
+      <p> Técnico en Sonido / Centro Cultural El Cerro 2012 - 2014</p>
       <hr>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, omnis!</p>
+      <p> Técnico electrónico y luthier / Audiomusica 2015 - 2022</p>
       <hr>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, beatae.</p>
-
+      <p> Coordinador y Jefe area Tecnica / Moreto Clima 2023 </p>
+      <br>
 
     </div>
+  </section>
 
-  
-    
+  <section class="container" id="Portafolio">
 
+    <p class="text-center container m-3 p-4" id="Fontport">Portafolio</p>
 
+    <div class="container">
+      <div class="row g-2">
+        <div class="col-6">
+          <div class="p-3 border bg-light"> <img src="assets/img/html.png" alt="proyecto cv" width="100%" class="p-3 m-3"> "Introducción a HTML"</div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 border bg-light"><img src="assets/img/landing page.png" alt="landing page" width="100%" class="p-3 m-3">"Introducción a CSS"</div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 border bg-light"><img src="assets/img/flex.png" alt="Iguana Page" width="100%" class="p-3 m-3">"Contenido Flex"</div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 border bg-light"><img src="assets/img/cuppon.png" alt="cuppon" width="100%" class="p-3 m-3">"4° Desafio - Bootstrap"</div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 border bg-light"><img src="assets/img/github - git.png" alt="cuppon" width="100%" class="p-3 m-3">"Terminal, Git y Github" </div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 border bg-light"><img src="assets/img/github page.png" alt="cuppon" width="100%" class="p-3 m-3">"Github page " </div>
+        </div>
+      </div>
+      
+    </div>
+    </div>
+    </div>
   </section>
   
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
