--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="#Portafolio">Portafolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Contacto</a>
+            <a class="nav-link " href="#Contacto">Contacto</a>
           </li>
         </ul>
         
@@ -137,6 +137,11 @@
     </div>
     </div>
   </section>
+
+  <footer id="Contacto" class="text-center p-3">
+
+    <p > <i class="fa-brands fa-github"> <i class="fa-brands fa-twitter"></i> <i class="fa-brands fa-instagram"></i></i> Todos los derechos reservados </p>
+  </footer>
   
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
