--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container-fluid">
-      <a class="navbar-brand py-4" id="plog" href="#"> </p> <i class="fa-solid fa-user mx-3" id="picon"></i> Cristopher Rivera </a>
+      <a class="navbar-brand py-4 fs-3" id="plog" href="#"> <i class="fa-solid fa-user mx-3" id="picon"></i> <i class="fa-solid fa-envelope" mx-3" id="picon"></i> Cristopher Rivera </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">SobreMi</a>
+            <a class="nav-link active fs-4" aria-current="page" href="#">SobreMi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Experiencia</a>
+            <a class="nav-link  fs-4" href="#">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Trabajos</a>
+            <a class="nav-link  fs-4" href="#">Trabajos</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item  fs-4">
             <a class="nav-link disabled">Contacto</a>
           </li>
         </ul>
